# mlops_coco

./: LICENSE  Makefile  README.md  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_coco/: __init__.py
