[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_coco"
version = "0.0.1"
description = "An image segmentation model trained on the COCO dataset"
authors = [
  { name = "A4OpS", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.5"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_coco"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
